added reset functionality

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       </div>
       <div class="row">
         <div class="row score" id="player_score">
-          You - <span id="playerScore">0</span> --<span id="playerChoice"></span>
-            Choice</span
+          You - <span id="playerScore">0</span> --<span id="playerChoice"></span>          </span
           >
         </div>
         <div class="row icons" id="player_icons">
@@ -42,8 +41,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="row score" id="computer_score">Computer - <span id="computerScore">0</span> --<span id="computerChoice"></span>
-            Choice</span
+        <div class="row score" id="computer_score">Computer - <span id="computerScore">0</span> --<span id="computerChoice"></span>    </span
           ></div>
         <div class="row icons" id="computer_icons">
           <i
